--- a/src/asserts/common.scss
+++ b/src/asserts/common.scss
@@ -1,10 +1,7 @@
-$primary-color: #303655;
+$primary-color: #0b5079;
 $secondary-color: #acb1b3;
 $light-color: #e0e9fb;
 $border-radius: 0.6rem;
-
-$success-color: #5cb85c;
-$danger-color: #FF0000;
 
 @mixin flexbox($align-items: flex-start, $justify-content: flex-start, $flex-wrap: nowrap, $flex-direction: row) {
     display: flex;
