--- a/src/components/Layout/AdminLayout/layout.scss
+++ b/src/components/Layout/AdminLayout/layout.scss
@@ -54,6 +54,11 @@ a {
     padding-left: 2rem;
     padding-right: 2rem;
 }
+.content__container {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
+}
 body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.4;
